Closed
Bug 718494
Opened 14 years ago
Closed 14 years ago
nsHTMLTableSectionElement.cpp:188:12: error: variable 'rv' set but not used [-Werror=unused-but-set-variable]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: romaxa, Assigned: romaxa)
References
Details
Attachments
(1 file, 1 obsolete file)
|
2.56 KB,
patch
|
Ms2ger
:
review+
|
Details | Diff | Splinter Review |
Tried to compile FF desktop with default config and warnings as errors param, and got it fail to compile.
most likely blocking bug 698275
Attachment #588959 -
Flags: review?(Ms2ger)
| Assignee | ||
Updated•14 years ago
|
Summary: Warning as errors, rv set but not used → nsHTMLTableSectionElement.cpp:188:12: error: variable 'rv' set but not used [-Werror=unused-but-set-variable]
Comment 1•14 years ago
|
||
Comment on attachment 588959 [details] [diff] [review]
rv set but not used
Please add NS_ENSURE_SUCCESS(rv, rv); after all these assignments instead.
Attachment #588959 -
Flags: review?(Ms2ger) → review-
| Assignee | ||
Comment 2•14 years ago
|
||
Assignee: nobody → romaxa
Attachment #588959 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #588990 -
Flags: review?(Ms2ger)
Comment 3•14 years ago
|
||
Comment on attachment 588990 [details] [diff] [review]
rv set but not used, use it
Looks good, thanks.
Attachment #588990 -
Flags: review?(Ms2ger) → review+
| Assignee | ||
Updated•14 years ago
|
Keywords: checkin-needed
Updated•14 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → DUPLICATE
Comment 5•14 years ago
|
||
This was pushed to inbound by Ms2ger, then merged to central:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2613bbdae8c6
https://hg.mozilla.org/mozilla-central/rev/2613bbdae8c6
You need to log in
before you can comment on or make changes to this bug.
Description
•