Bug 718494 - nsHTMLTableSectionElement.cpp:188:12: error: variable 'rv' set but not used; r=Ms2ger